@@ -43,6 +43,11 @@ namespace io { // geos.io
 
 string WKBReader::BAD_GEOM_TYPE_MSG = "bad geometry type encountered in ";
 
+WKBReader::WKBReader()
+	:
+	factory(*(GeometryFactory::getDefaultInstance()))
+{}
+
 ostream &
 WKBReader::printHEX(istream &is, ostream &os)
 {
